# gate

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  gate-directions.md  postconditions.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: gate-review.yml  test.yml
config/: com.gate.server.plist.example  cursor-rules-gate.md  cursor-rules.example.md  cursor-rules.example.python.md  fix-blocklist-gate.txt  fix-blocklist.example.txt  gate.toml.example
docs/: external-checks.md  finding-schema.md  health-and-recovery.md  metrics.md  notifications.md  remote-access.md  security.md
gate/: audit.py  builder.py  checkpoint.py  claude.py  cleanup.py  cli.py  client.py  code.py  codex.py  config.py  external_checks.py  extract.py  finding_id.py  fixer.py  fixer_polish.py  github.py  health.py  io.py  logger.py  notify.py  orchestrator.py  profiles.py  prompt.py  queue.py  quota.py  runner.py  schemas.py  server.py  setup.py  spec_pr.py  state.py  tmux.py  tui.py  workspace.py
prompts/: architecture.md  fix-build-errors.md  fix-plan-refine.md  fix-plan.md  fix-polish.md  fix-prep.md  fix-rereview.md  fix-senior-hopper.md  fix-senior.md  fix.md  gate-audit.md  gate-design.md  gate-implement.md  gate-junior.md  gate-prep.md  logic.md  postconditions.md  security.md  triage.md  verdict.md
tests/: conftest.py  test_audit.py  test_builder.py  test_checkpoint.py  test_claude.py  test_cleanup.py  test_cli.py  test_client.py  test_code.py  test_codex.py  test_config.py  test_edge_cases.py  test_external_checks.py  test_extract.py  test_fix_pipeline_config.py  test_fixer.py  test_github.py  test_health.py  test_logger.py  test_notify.py  test_orchestrator.py  test_profiles.py  test_prompt.py  test_queue.py  test_quota.py  test_runner.py  test_schemas.py  test_server.py  test_setup.py  test_spec_pr.py  test_state.py  test_tmux.py  test_tui.py  test_tui_unit.py  test_workspace.py
workflows/: gate-review.yml
